# cheshire

./: .gitignore  README.md  pyproject.toml  smile.py  test.py
.github/: dependabot.yml
cheshire/communication/: bluetooth.py  transmitter.py
cheshire/compiler/: compiler.py  state.py
cheshire/generic/: effect.py
cheshire/hal/: devices.py
cheshire/hal/compilers/ks03_new/: compiler.py  platform_commands.py
cheshire/hal/compilers/ks03_old/: compiler.py  constants.py  platform_commands.py
communication/: bluetooth.py  transmitter.py
compiler/: compiler.py  state.py
docs/: user_guide.md
generic/: command.py  effect.py  platform_command.py
hal/: devices.py
hal/compilers/ks03_new/: compiler.py  constants.py  platform_commands.py
hal/compilers/ks03_old/: compiler.py  platform_commands.py
