[tool.poetry]
name = "cheshire"
version = "0.3.1"
description = "API for Keepsmile, LuckyStyle, Leeleberd, and related smart lights"
authors = ["Eugene Wolffe <fluffy1781@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "cheshire" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bleak = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
