[tool.poetry]
name = "cheshire"
version = "0.6.0"
description = "API for Keepsmile, LuckyStyle, Leeleberd, and related smart lights"
authors = ["Eugene Wolffe <fluffy1781@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "cheshire" },
]

[tool.poetry.dependencies]
python = ">=3.13"
bleak = ">=0.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
