[project]
authors = [
    {name = "Eugene Wolffe", email = "fluffy1781@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.22.3",
    "typing-extensions>=4.14.0",
]
name = "cheshire"
version = "0.6.2"
description = "API for Keepsmile, LuckyStyle, Leeleberd, and related smart lights"
readme = "README.md"
